--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <h1>
           我是標題1
       </h1>
+      <img src = "http://pic44.nipic.com/20140724/2531170_064505406000_2.jpg">
+      
   </body>
 
 </html>
