--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       </h1>
       <img src = "http://pic44.nipic.com/20140724/2531170_064505406000_2.jpg">
       
+      <ol>
+          <li> google翻譯 scr="https://translate.google.com.tw/" </li>
+      </ol>
+      
   </body>
 
 </html>
