--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       
       <ul>
           <li>
-              google翻譯
+              google翻譯<a href ="https://translate.google.com.tw/">
           </li>
       </ul>    
   </body>
